[package]
name = "threshold-paillier"
version = "0.1.0"
edition = "2021"
authors = ["Parsa Sarfarazi <parsasarfarazi@gmail.com>"]
description = "Threshold Paillier cryptosystem in Rust based on the paper by "
license = "MIT"
repository = "https://github.com/parsasarfarazi/threshold-paillier"
readme = "README.md"
keywords = ["cryptography", "paillier", "threshold", "homomorphic"]
categories = ["cryptography", "algorithms"]

[lib]
name = "threshold_paillier"
path = "src/lib.rs"


[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
thiserror = "1.0"
rug = "1.26"
sha2 = "0.10"
crypto-bigint = "0.6.1"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "benchmarks"
# harness = false